--- a/main.tex
+++ b/main.tex
@@ -39,11 +39,10 @@
 		\vspace{-\baselineskip} % Required for vertically aligning minipages
 		\cvsect{About me}
 
-		I am a 19 year old freshman currently majoring in Computer Science at the University of Arkansas. I have a background in simple server management and web design.
+		I am a nineteen year old freshman currently majoring in Computer Science at the University of Arkansas. I have a background in simple server management and web design.
 
 	\end{minipage}
 	\hfill % Whitespace between
-	\hfill
 	\begin{minipage}[t]{0.5\textwidth} % 50% of the page for the skills bar chart
 		\vspace{-\baselineskip} % Required for vertically aligning minipages
 		\cvsect{Skills}
@@ -69,12 +68,12 @@
 		{2018 - Current}
 		{Computer Science BS}
 		{}
-		{University of Arkansas, Fayetteville Arkansas}
+		{University of Arkansas, Fayetteville, Arkansas}
 	\entry
 		{2014 -- 2018}
 		{High School}
 		{}
-		{Lincoln-Way East, Frankfort Illinois}
+		{Lincoln-Way East, Frankfort, Illinois}
 \end{entrylist}
 
 \cvsect{Experience}
@@ -84,8 +83,16 @@
 		{Mar. 2019}
 		{4th place in Hackathon}
 		{ACM Spring Hackathon (Sponsored by J.B. Hunt)}
-		{Paced 4th our of 19 teams at the Spring 2019 Hackathon. Used serial output from arduinos to update a web server with showing loads of various trucks. The team was comprised mostly of freshman, and the source code can be found on my github in the spinghackathon2019 repo.\
+		{My team placed 4th out of 19 at the Spring 2019 Hackathon. We used serial output from arduinos to update a web server with showing loads of various trucks in real time. The team was comprised mostly of freshman, and the source code can be found on my github in the spinghackathon2019 repo.\
 		\newline\texttt{Node.js}\slashsep\texttt{C}\slashsep\texttt{HTML}\slashsep\texttt{CSS}}
+\end{entrylist}
+
+\begin{entrylist}
+	\entry
+		{2016 - Current}
+		{Library Shelver}
+		{Frankfort Public Library}
+		{As one of the oldest library shelvers, I am responsible for training new hires. I have trained all of the shelvers currently working in the library today.}\
 \end{entrylist}
 
 \cvsect{Awards}
@@ -95,7 +102,7 @@
 		{Jan. 2018}
 		{Eagle Scout with three palms}
 		{Frankfort Troop 270}
-		{I am an Eagle Scout that grew up in the scouting program. My Eagle Project was to build a Gaga Ball pit for our local park district, which involved weeks of planning, fundraising, and prepping to complete. The contstruction itself took three days and I led about 20 other Scouts in total during the process.}
+		{I am an Eagle Scout and have been active in the program since first grade. My Eagle Project was to build a Gaga Ball pit for our local park district. This involved weeks of planning, fundraising, and prep work to complete. The contstruction itself took three days and I led about 20 other Scouts in total during the process.}
 \end{entrylist}
 
 \begin{minipage}[t]{0.3\textwidth}
