--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 		{Mar. 2019}
 		{4th place in Hackathon}
 		{ACM Spring Hackathon (Sponsored by J.B. Hunt)}
-		{My team placed 4th out of 19 at the Spring 2019 Hackathon. We used serial output from arduinos to update a web server with showing loads of various trucks in real time. The team was comprised mostly of freshman, and the source code can be found on my github in the spinghackathon2019 repo.\
+		{My team placed fourth out of nineteen at the Spring 2019 Hackathon. Our project used serial output from arduinos to update a web server in real time. This was used to show the percentage of load in trucks inexspensively. The team was comprised mostly of freshman, and the source code can be found on my github in the \href{https://www.github.com/dizeeee/springhackathon2019}{spinghackathon2019} repo.\
 		\newline\texttt{Node.js}\slashsep\texttt{C}\slashsep\texttt{HTML}\slashsep\texttt{CSS}}
 \end{entrylist}
 
@@ -92,7 +92,7 @@
 		{2016 - Current}
 		{Library Shelver}
 		{Frankfort Public Library}
-		{As one of the oldest library shelvers, I am responsible for training new hires. I have trained all of the shelvers currently working in the library today.}\
+		{As one of the most senior library shelvers, I am responsible for training new hires. I have trained all of the shelvers currently working in the library today.}\
 \end{entrylist}
 
 \cvsect{Awards}
