--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 		\vspace{-\baselineskip} % Required for vertically aligning minipages
 		\cvsect{About me}
 
-		I am a nineteen year old freshman currently majoring in Computer Science at the University of Arkansas. I have a background in simple server management and web design.
+		I am a student currently majoring in Computer Science at the University of Arkansas. I have a background in simple server management and web design.
 
 	\end{minipage}
 	\hfill % Whitespace between
@@ -92,7 +92,7 @@
 		{2016 - Current}
 		{Library Shelver}
 		{Frankfort Public Library}
-		{As one of the most senior library shelvers, I am responsible for training new hires. I have trained all of the shelvers currently working in the library today.}\
+		{As a library shelver, I am responsible for shelving books, assisting patrons, as well as helping set up and clean after events. Because I am one of the most senior library shelvers, I am also responsible for training new hires. I have trained all of the shelvers currently working in the library today.}\
 \end{entrylist}
 
 \cvsect{Awards}
