--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 	
 	\vspace{6pt}
 	
-	{\huge Freshman Developer} % Career or current job title
+	{\huge Developer} % Career or current job title
 \end{minipage}
 \begin{minipage}[t]{0.3\textwidth} % 27.5% of the page width for the first row of icons
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
@@ -35,7 +35,7 @@
 
 \vspace{0.5cm}
 
-	\begin{minipage}[t]{0.45\textwidth}
+	\begin{minipage}[t]{0.35\textwidth}
 		\vspace{-\baselineskip} % Required for vertically aligning minipages
 		\cvsect{About me}
 
@@ -43,19 +43,18 @@
 
 	\end{minipage}
 	\hfill % Whitespace between
-	\begin{minipage}[t]{0.5\textwidth} % 50% of the page for the skills bar chart
+	\begin{minipage}[t]{0.6\textwidth} % 50% of the page for the skills bar chart
 		\vspace{-\baselineskip} % Required for vertically aligning minipages
 		\cvsect{Skills}
-		\skill{ubuntu}
-		\skill{nodejs}
-		\skill{java}
-		\skill{html}
-		\skill{css}
-		\skill{javascript}
+		\skill{ubuntu}{Ubuntu}
+		\skill{nodejs}{Node.js}
+		\skill{java}{Java}
+		\skill{html}{HTML}
+		\skill{css}{CSS}
+		\skill{javascript}{Javascript}
 		\vspace{.2cm}\\
-		\skill{cpp}
-		\skill{git}
-		
+		\skill{cpp}{C++}
+		\skill{git}{Git}
 	\end{minipage}
 
 \vspace{0.5cm}
@@ -76,7 +75,7 @@
 		{Lincoln-Way East, Frankfort, Illinois}
 \end{entrylist}
 
-\cvsect{Experience}
+\cvsect{Leadership Experience}
 
 \begin{entrylist}
 	\entry
@@ -120,7 +119,7 @@
 	\cvsect{Clubs}
 	
 	\textbf{ACM} - 2 Semesters\\
-	\textbf{Game Club} - 2 Semesters\\
+	\textbf{Gaming Club} - 2 Semesters\\
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.4\textwidth}
