--- a/jackmalcom.tex
+++ b/jackmalcom.tex
@@ -55,6 +55,7 @@
 		\vspace{.2cm}\\
 		\skill{cpp}{C++}
 		\skill{git}{Git}
+		\skill{flutter}{Flutter}
 	\end{minipage}
 
 \vspace{0.5cm}
@@ -118,8 +119,8 @@
 	
 	\cvsect{Clubs}
 	
-	\textbf{ACM} - 2 Semesters\\
-	\textbf{Gaming Club} - 2 Semesters\\
+	\textbf{ACM} - 3 Semesters\\
+	\textbf{Gaming Club} - 3 Semesters\\
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.4\textwidth}
