--- a/jackmalcom.tex
+++ b/jackmalcom.tex
@@ -16,7 +16,7 @@
 	
 	\vspace{6pt}
 	
-	{\huge Developer} % Career or current job title
+	{\huge CS Student} % Career or current job title
 \end{minipage}
 \begin{minipage}[t]{0.3\textwidth} % 27.5% of the page width for the first row of icons
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
@@ -29,17 +29,17 @@
 \end{minipage}
 \begin{minipage}[t]{0.3\textwidth} % 27.5% of the page width for the second row of icons
 	\vspace{-\baselineskip}
-	\icon{Globe}{12}{\href{https://jackmal.com}{jackmal.com (Work in progress)}}\\
+	\icon{Globe}{12}{\href{https://jackmal.com}{jackmal.com}}\\
 	\icon{Github}{12}{\href{https://github.com/dizeeee}{github.com/dizeeee}}\\
 \end{minipage}
 
-\vspace{0.5cm}
+\vspace{16pt}
 
 	\begin{minipage}[t]{0.35\textwidth}
 		\vspace{-\baselineskip} % Required for vertically aligning minipages
 		\cvsect{About me}
 
-		I am a student currently majoring in Computer Science at the University of Arkansas. I have a background in simple server management and web design.
+		I'm currently a student at the University of Arkansas, and focus primarily on web design, cloud management, and Node.js. I enjoy playing video games and have recently started learning the Rust programming language in my free time.
 
 	\end{minipage}
 	\hfill % Whitespace between
@@ -58,14 +58,14 @@
 		\skill{flutter}{Flutter}
 	\end{minipage}
 
-\vspace{0.5cm}
+\vspace{-6pt}
 
 
 \cvsect{Education}
 
 \begin{entrylist}
 	\entry
-		{2018 - Current}
+		{2018 - 2022}
 		{Computer Science BS}
 		{}
 		{University of Arkansas, Fayetteville, Arkansas}
@@ -80,19 +80,19 @@
 
 \begin{entrylist}
 	\entry
-		{Mar. 2019}
-		{4th place in Hackathon}
-		{ACM Spring Hackathon (Sponsored by J.B. Hunt)}
-		{My team placed fourth out of nineteen at the Spring 2019 Hackathon. Our project used serial output from arduinos to update a web server in real time. This was used to show the percentage of load in trucks inexspensively. The team was comprised mostly of freshman, and the source code can be found on my github in the \href{https://www.github.com/dizeeee/springhackathon2019}{spinghackathon2019} repo.\
-		\newline\texttt{Node.js}\slashsep\texttt{C}\slashsep\texttt{HTML}\slashsep\texttt{CSS}}
+		{2018 -- 2020}
+		{J. B. Hunt Hackthon team lead}
+		{ACM Hackathon}
+		{During my time in college, I have led several hackthon teams with a variety of different members and skill levels. My current team is Team Goose, which has competed twice with relative success. You can find our projects on github at \href{https://github.com/Team-Goose}{https://github.com/Team-Goose}\
+		\newline\texttt{Node.js}\slashsep\texttt{Dart}\slashsep\texttt{Firebase}}
 \end{entrylist}
 
 \begin{entrylist}
 	\entry
 		{2016 - Current}
-		{Library Shelver}
+		{Library Page}
 		{Frankfort Public Library}
-		{As a library shelver, I am responsible for shelving books, assisting patrons, as well as helping set up and clean after events. Because I am one of the most senior library shelvers, I am also responsible for training new hires. I have trained all of the shelvers currently working in the library today.}\
+		{My job at the library involves maintaining organization and assisting in various events. I have also helped in training many of the other Pages working at the library today.}\
 \end{entrylist}
 
 \cvsect{Awards}
@@ -102,7 +102,7 @@
 		{Jan. 2018}
 		{Eagle Scout with three palms}
 		{Frankfort Troop 270}
-		{I am an Eagle Scout and have been active in the program since first grade. My Eagle Project was to build a Gaga Ball pit for our local park district. This involved weeks of planning, fundraising, and prep work to complete. The contstruction itself took three days and I led about 20 other Scouts in total during the process.}
+		{Being a scout is an important part of my life, and I credit my time with my troop for giving me the leadership skills I have today. The most important part of getting to Eagle Scout, the highest rank in scouting, is by doing an Eagle Project, and mine involved coordinating funding, supplies, and volunteers to create playground equipment for my local park district. The finished product was the culmination of over half a year of organization and the help of more than 20 volunteers.}
 \end{entrylist}
 
 \begin{minipage}[t]{0.3\textwidth}
@@ -119,16 +119,16 @@
 	
 	\cvsect{Clubs}
 	
-	\textbf{ACM} - 3 Semesters\\
-	\textbf{Gaming Club} - 3 Semesters\\
+	\textbf{ACM} - 4 Semesters\\
+	\textbf{UARK Esports} - 4 Semesters\\
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.4\textwidth}
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
-	\cvsect{Source}
+	\cvsect{Open Source}
 	
-	This entire resume is written using LaTeX and is completely open source. All source code is hosted on my Github in the \href{https://www.github.com/Dizeeee/resume}{resume repo.}
+	This entire resume is written using LaTeX and is completely open source. All source code is hosted on my Github at \href{https://www.github.com/Dizeeee/resume}{https://github.com/dizeeee/resume}
 \end{minipage}
 
 %----------------------------------------------------------------------------------------
