Changed URL format and some small wording changes

--- a/jackmalcom.tex
+++ b/jackmalcom.tex
@@ -83,7 +83,7 @@
 		{2018 -- 2020}
 		{J. B. Hunt Hackthon team lead}
 		{ACM Hackathon}
-		{During my time in college, I have led several hackthon teams with a variety of different members and skill levels. My current team is Team Goose, which has competed twice with relative success. You can find our projects on github at \href{https://github.com/Team-Goose}{https://github.com/Team-Goose}\
+		{During my time in college, I have led several hackthon teams with a variety of different members and skill levels. My current team is Team Goose, which has competed twice with relative success. You can find our projects on github at \href{https://github.com/Team-Goose}{github.com/Team-Goose}\
 		\newline\texttt{Node.js}\slashsep\texttt{Dart}\slashsep\texttt{Firebase}}
 \end{entrylist}
 
@@ -92,7 +92,7 @@
 		{2016 - Current}
 		{Library Page}
 		{Frankfort Public Library}
-		{My job at the library involves maintaining organization and assisting in various events. I have also helped in training many of the other Pages working at the library today.}\
+		{My job at the library involves maintaining organization, assisting patrons, and helping run various events. I have also helped in training many of the other Pages working at the library today.}\
 \end{entrylist}
 
 \cvsect{Awards}
@@ -128,7 +128,7 @@
 	
 	\cvsect{Open Source}
 	
-	This entire resume is written using LaTeX and is completely open source. All source code is hosted on my Github at \href{https://www.github.com/Dizeeee/resume}{https://github.com/dizeeee/resume}
+	This entire resume is written using LaTeX and is completely open source. All source code is hosted on my Github at \href{https://www.github.com/Dizeeee/resume}{github.com/dizeeee/resume}
 \end{minipage}
 
 %----------------------------------------------------------------------------------------
