Added rust to skills

--- a/jackmalcom.tex
+++ b/jackmalcom.tex
@@ -1,6 +1,7 @@
 \documentclass[9pt]{developercv} % Default font size, values from 8-12pt are recommended
 
 \usepackage{graphics, subfigure}
+\usepackage[none]{hyphenat}
 % \usepackage[none]{hyphenat}
 
 \begin{document}
@@ -56,6 +57,7 @@
 		\skill{cpp}{C++}
 		\skill{git}{Git}
 		\skill{flutter}{Flutter}
+		\skill{rust}{Rust}
 	\end{minipage}
 
 \vspace{-6pt}
@@ -81,9 +83,9 @@
 \begin{entrylist}
 	\entry
 		{2018 -- 2020}
-		{J. B. Hunt Hackthon team lead}
+		{J. B. Hunt Hackathon team lead}
 		{ACM Hackathon}
-		{During my time in college, I have led several hackthon teams with a variety of different members and skill levels. My current team is Team Goose, which has competed twice with relative success. You can find our projects on github at \href{https://github.com/Team-Goose}{github.com/Team-Goose}\
+		{During my time in college, I have led several hackathon teams with a variety of different members and skill levels. My current team is Team Goose, which has competed twice with relative success. You can find our projects on github at \href{https://github.com/Team-Goose}{github.com/Team-Goose}\
 		\newline\texttt{Node.js}\slashsep\texttt{Dart}\slashsep\texttt{Firebase}}
 \end{entrylist}
 
@@ -128,7 +130,7 @@
 	
 	\cvsect{Open Source}
 	
-	This entire resume is written using LaTeX and is completely open source. All source code is hosted on my Github at \href{https://www.github.com/Dizeeee/resume}{github.com/dizeeee/resume}
+	This resume is written using LaTeX and is open source under the MIT License. All of the source code is hosted on Github at \href{https://www.github.com/Dizeeee/resume}{github.com/dizeeee/resume}
 \end{minipage}
 
 %----------------------------------------------------------------------------------------
